--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Button Name="hhh"/>
     </Grid>
 </Page>
